src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Name_Brochure__c</fullName>
        <description>Member facing name of group. As used in brochures. Optional field, populated only when it is different to the web name.</description>
        <label>Client Name Brochure</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Number__c</fullName>
        <displayFormat>CN-{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Client_background__c</fullName>
        <label>Client background</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Status__c</fullName>
        <label>Company Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Broker</value>
            </filterItems>
            <infoMessage>Please select a Broker for this Prospect/Client</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Default_Broker__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Companies</label>
    </listViews>
    <listViews>
        <fullName>List_of_Brokers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Broker</value>
        </filters>
        <label>List of Brokers</label>
    </listViews>
    <listViews>
        <fullName>List_of_Business_Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Partner</value>
        </filters>
        <label>List of Business Partners</label>
    </listViews>
    <listViews>
        <fullName>List_of_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <label>List of Clients</label>
    </listViews>
    <listViews>
        <fullName>List_of_Health_Funds</fullName>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Health_Fund</value>
        </filters>
        <label>List of Health Funds</label>
    </listViews>
    <listViews>
        <fullName>List_of_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <label>List of Prospects</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Broker</fullName>
        <active>true</active>
        <description>Use this record type to create new Brokers</description>
        <label>Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Partner</fullName>
        <active>true</active>
        <description>Use this record type to create new Business Partners</description>
        <label>Business Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>Use this record type to create new Clients</description>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health_Fund</fullName>
        <active>true</active>
        <description>Use this record type to create new Health Funds</description>
        <label>Health Fund</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>Use this record type to create new Brokers internal companies in Australian Unity (For example: Account support contacts)</description>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <description>Use this record type to create new Prospects</description>
        <label>Prospect</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>